--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 reportlab==3.5.59
 pdfdocument==4.0
--e git+git@github.com:python-openxml/python-docx.git@da75fcf#egg=python-docx
+python-docx==0.8.11
 pydocx==0.9.10
