--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
         "Framework :: Django",
         "Framework :: Django :: 4.2",
         "Framework :: Django :: 5.1",
+        "Framework :: Django :: 5.2",
         "Intended Audience :: Developers",
         "License :: OSI Approved :: MIT License",
         "Operating System :: OS Independent",
@@ -26,12 +27,13 @@ classifiers = [
         "Programming Language :: Python :: 3.10",
         "Programming Language :: Python :: 3.11",
         "Programming Language :: Python :: 3.12",
+        "Programming Language :: Python :: 3.13",
         "Topic :: Utilities",
         "Topic :: Education",
 ]
 
 dependencies = [
-    "Django>=4.2,<5.2",
+    "Django>=4.2,<6.0",
     "reportlab==4.2.5",
     "pdfdocument==4.0",
     "python-docx==1.1.2",
